Quorum3/Library/Tests/Inheritance/Pass/GetParentFieldMain.quorum
package Tests 

class Main is A 
    action Main
        output Test1()
    end 

    action Test1 returns integer 
        parent:A:y = 5 
        return parent:A:y 
    end 
end 