Quorum3/Library/Tests/Inheritance/Fail/ParentActionNotExist.quorum
class Main is A
    action Main
        parent:A:DoThing()
    end
end